inital commit with tailwind and material setup

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html, body {
+  @apply h-full;
+}
+
+
+body {
+  @apply m-0 text-sm leading-[1.5em] bg-primary-100 text-gray-950;
+  font-family: "Nunito", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, strong {
+  @apply font-medium;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  @apply mt-0 mb-4;
+}
+
+a {
+  @apply underline;
+}
+
+button {
+  @apply cursor-pointer;
+}
+
+:disabled {
+  @apply cursor-not-allowed;
+}
