login page design done

--- a/src/app/pages/auth/components/password-field/password-field.component.html
+++ b/src/app/pages/auth/components/password-field/password-field.component.html
@@ -1,6 +1,12 @@
 <div class="relative">
   <input [type]="inputType()" class="form-control pr-8" [formControl]="control()">
-  <button class="absolute right-3 top-[calc(50%-10px)] p-0 bg-[transparent] outline-none border-none flex">
-    <mat-icon class="text-xl leading-[1em] !w-[1lh] !h-[1lh]">visibility</mat-icon>
+  <button class="absolute right-3 top-[calc(50%-10px)] p-0 bg-[transparent] outline-none border-none flex" (click)="toggleInputType()">
+    <mat-icon class="text-xl leading-[1em] !w-[1lh] !h-[1lh]">
+      @if (inputType() === 'password') {
+        visibility
+      } @else {
+        visibility_off
+      }
+    </mat-icon>
   </button>
 </div>
