--- a/src/app/pages/auth/pages/register/register.component.html
+++ b/src/app/pages/auth/pages/register/register.component.html
@@ -1,9 +1,9 @@
-<form [formGroup]="form">
-  <mat-card appearance="outlined">
-    <mat-card-header class="justify-center">
-      <mat-card-title>Register</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
+<mat-card appearance="outlined">
+  <mat-card-header class="justify-center">
+    <mat-card-title>Register</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <form [formGroup]="form">
       <div class="flex flex-wrap gap-4">
         <div class="flex-1">
           <div class="!mb-4">
@@ -32,8 +32,8 @@
       </div>
       <div class="flex items-center gap-3 pt-1">
         <button type="submit" class="btn btn-primary">Register</button>
-        <p class="m-0 grow text-right">Already have an account? <a class="text-danger-600 font-medium" href="javascript:void(0)">Login here</a></p>
+        <p class="m-0 grow text-right">Already have an account? <a class="text-danger-600 font-medium" routerLink="../login">Login here</a></p>
       </div>
-    </mat-card-content>
-  </mat-card>
-</form>
+    </form>
+  </mat-card-content>
+</mat-card>
