loging page, loader component added

--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -13,7 +13,12 @@
         <app-password-field [control]="form.controls.password"></app-password-field>
       </div>
       <div class="flex items-center gap-3 pt-2">
-        <button class="btn btn-primary" type="submit">Login</button>
+        <button class="btn btn-primary inline-flex" type="submit" disabled="loading()">
+          @if (loading()) {
+            <app-loader></app-loader>&nbsp;
+          }
+          Login
+        </button>
         <p class="m-0 grow text-right"><a href="javascript:void(0)" class="text-danger-600 font-medium">Forgot password?</a></p>
       </div>
     </form>
