--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,3 +40,4 @@ label {
 @import './assets/scss/card.scss';
 @import './assets/scss/form.scss';
 @import './assets/scss/button.scss';
+@import './assets/scss/keyframes.scss';
