--- a/src/assets/scss/button.scss
+++ b/src/assets/scss/button.scss
@@ -5,5 +5,10 @@
     &-primary {
       @apply bg-primary-default text-[white] hover:bg-primary-900;
     }
+
+    &.disabled,
+    &:disabled {
+      @apply pointer-events-none opacity-85;
+    }
   }
 }
