--- a/src/app/pages/auth/pages/register/register.component.html
+++ b/src/app/pages/auth/pages/register/register.component.html
@@ -3,32 +3,65 @@
     <mat-card-title>Register</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="register()">
+    <form [formGroup]="form" (ngSubmit)="register()" #ngForm="ngForm">
       <div class="flex flex-wrap gap-4">
         <div class="flex-1">
           <div class="!mb-4">
             <label>Firstname</label>
             <input type="text" class="form-control" formControlName="firstname">
+            <app-form-error
+              [control]="form.controls.firstname"
+              [messages]="[{ name: 'required', message: 'Firstname is required.' }]"
+              [submitted]="ngForm.submitted"
+            ></app-form-error>
           </div>
         </div>
         <div class="flex-1">
           <div class="!mb-4">
             <label>Lastname</label>
             <input type="text" class="form-control" formControlName="lastname">
+            <app-form-error
+              [control]="form.controls.lastname"
+              [messages]="[{ name: 'required', message: 'Lastname is required.' }]"
+              [submitted]="ngForm.submitted"
+            ></app-form-error>
           </div>
         </div>
       </div>
       <div class="!mb-4">
         <label>Email</label>
         <input type="email" class="form-control" formControlName="email">
+        <app-form-error
+          [control]="form.controls.email"
+          [messages]="[
+            { name: 'required', message: 'Email is required.' },
+            { name: 'email', message: 'Email is not valid.' }
+          ]"
+          [submitted]="ngForm.submitted"
+        ></app-form-error>
       </div>
       <div class="!mb-4">
         <label>Password</label>
         <app-password-field [control]="form.controls.password"></app-password-field>
+        <app-form-error
+          [control]="form.controls.password"
+          [messages]="[
+            { name: 'required', message: 'Password is required.' },
+            { name: 'pattern', message: 'Password must have 8 or more characters, contain 1 uppercase and 1 lowercase letter, 1 number and 1 special character.' }
+          ]"
+          [submitted]="ngForm.submitted"
+        ></app-form-error>
       </div>
       <div class="!mb-4">
         <label>Confirm Password</label>
         <app-password-field [control]="form.controls.password_confirmation"></app-password-field>
+        <app-form-error
+          [control]="form"
+          [messages]="[
+            { name: 'passwordConfirmation', message: 'Confirmation does not match with password.' }
+          ]"
+          [submitted]="ngForm.submitted"
+        ></app-form-error>
       </div>
       <div class="flex items-center gap-3 pt-1">
         <button type="submit" class="btn btn-primary inline-flex" [disabled]="loading()">
