few random changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<p>{{ authStore.loggedIn() ? 'Logged in' : 'Logged out' }} {{ authStore.user()?.email }}</p>
-<router-outlet>
+<app-layout>
+  <router-outlet></router-outlet>
+</app-layout>
