--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,4 @@ label {
 @import './assets/scss/form.scss';
 @import './assets/scss/button.scss';
 @import './assets/scss/keyframes.scss';
+@import './assets/scss/dropdown.scss';
